2010-06-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add trie_fread() and trie_fwrite() interfaces for reading/writing trie
	data from an open file. Thanks NIIBE Yutaka <gniibe@fsij.org> for the
	suggestion.

	* datrie/trie.h (trie_fread, trie_fwrite): Add new API declarations.
	* datrie/trie.c (trie_new_from_file, trie_fread, trie_save,
	  trie_fwrite):
	Refactor open file handling of trie_new_from_file() and trie_save()
	into trie_fread() and trie_fwrite(), and make the old functions
	do file opening/closing as wrappers to them.
	* datrie/libdatrie.def, datrie/libdatrie.map: Add symbol exports.

2010-06-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/trie.c (trie_store_if_absent): Document that it's available
	since 0.2.4.
	* datrie/libdatrie.def, datrie/libdatrie.map: Add symbol exports for
	trie_store_if_absent().
	* ChangeLog: Fix file locations in previous log.

2010-06-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add trie_store_if_absent() interface to avoid race condition in
	multi-thread applications. Thanks Dan Searle <dan.searle@censornet.com>
	for the suggestion.

	* datrie/trie.h (trie_store_if_absent): Add new API declaration.
	* datrie/trie.c (trie_store_if_absent, trie_store,
	  trie_store_conditionally):
	Refactor trie_store() into trie_store_conditionally() with extra arg
	is_overwrite, and make the two public functions mere wrappers to it.
	* configure.ac: Bump library version according to the added symbol.

2010-03-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/trie.c (trie_save): Do not return before closing file.
	Thanks to Xu Jiandong for the report.

2010-03-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.

2010-02-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Bump library revision.
	* NEWS, configure.ac:
	=== Version 0.2.3 ===

2010-02-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>
