@@ -30,9 +30,9 @@
 #include <stdio.h>
 #include "alpha-map.h"
 
-AlphaMap *  alpha_map_read_bin (FILE *file);
+AlphaMap *  alpha_map_fread_bin (FILE *file);
 
-int         alpha_map_write_bin (const AlphaMap *alpha_map, FILE *file);
+int         alpha_map_fwrite_bin (const AlphaMap *alpha_map, FILE *file);
 
 TrieChar    alpha_map_char_to_trie (const AlphaMap *alpha_map,
                                     AlphaChar       ac);
